--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JST AI - JSON to TOON Converter</title>
     <link rel="stylesheet" href="/src/styles.css">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
     <div class="app-container">
@@ -18,6 +19,19 @@
                     <h1 class="app-title">JSON to TOON Tool</h1>
                 </div>
                 <div class="header-actions">
+                    <!-- User Profile or Sign In -->
+                    <div id="userSection" class="user-section">
+                        <!-- Sign in button (shown when not logged in) -->
+                        <div id="googleSignInBtn" class="google-signin-container"></div>
+                        
+                        <!-- User profile (shown when logged in) -->
+                        <div id="userProfile" class="user-profile" style="display: none;">
+                            <img id="userAvatar" class="user-avatar" alt="User" />
+                            <span id="userName" class="user-name"></span>
+                            <button id="logoutBtn" class="header-btn logout-btn">Logout</button>
+                        </div>
+                    </div>
+                    
                     <button id="faqToggle" class="header-btn" aria-label="FAQ">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd"/>
