--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <!-- TOON Output -->
                 <div class="editor-panel">
                     <div class="panel-header">
-                        <span class="panel-title">TOON (Token Optimized Object Notation) Output</span>
+                        <span class="panel-title">TOON (Token Optimized Object Notation)</span>
                         <div class="panel-actions">
                             <button id="downloadBtn" class="btn-ghost btn-download" disabled title="Download as .txt">
                                 <svg width="14" height="14" viewBox="0 0 20 20" fill="currentColor">
@@ -131,6 +131,13 @@
                     <svg id="loadingSpinner" class="btn-spinner" width="20" height="20" viewBox="0 0 24 24" fill="none" style="display: none;">
                         <circle class="spinner-track" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                         <path class="spinner-path" d="M12 2a10 10 0 0 1 10 10" stroke="currentColor" stroke-width="4" stroke-linecap="round"></path>
+                    </svg>
+                </button>
+                <!-- Mobile Redo Button (shown after conversion) -->
+                <button id="redoBtn" class="btn-redo-mobile">
+                    <span>Redo Conversion</span>
+                    <svg class="btn-icon" width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z" clip-rule="evenodd"/>
                     </svg>
                 </button>
             </div>
