--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
                     <!-- User Profile or Sign In -->
                     <div id="userSection" class="user-section">
                         <!-- Sign in button (shown when not logged in) -->
-                        <div id="googleSignInBtn" class="google-signin-container"></div>
+                        <button id="googleSignInBtn" class="google-signin-btn">
+                            <svg class="google-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+                                <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+                                <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+                                <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
+                            </svg>
+                            Sign in with Google
+                        </button>
                         
                         <!-- User profile (shown when logged in) -->
                         <div id="userProfile" class="user-profile" style="display: none;">
@@ -183,16 +191,32 @@
                         <p class="faq-answer">TOON (Token Optimized Object Notation) is a CSV-like format that reduces token usage by 40-70% compared to JSON, making it perfect for AI applications and LLMs.</p>
                     </div>
                     <div class="faq-item">
+                        <h3 class="faq-question">Do I need to sign in to use this tool?</h3>
+                        <p class="faq-answer">No! You can convert JSON to TOON and copy the results without signing in. However, signing in with Google unlocks the download feature to save your conversions as files.</p>
+                    </div>
+                    <div class="faq-item">
                         <h3 class="faq-question">What file formats are supported?</h3>
-                        <p class="faq-answer">We support JSON, CSV, and XLSX files. Upload any of these formats and convert them to token-efficient TOON format.</p>
+                        <p class="faq-answer">We support JSON, CSV, and XLSX files. Upload any of these formats and convert them to token-efficient TOON format instantly.</p>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-question">Is my data secure?</h3>
-                        <p class="faq-answer">Yes! All conversions happen locally in your browser. Your data never leaves your device unless you explicitly download or copy it.</p>
+                        <p class="faq-answer">Yes! All conversions happen on our secure backend. We use Google OAuth for authentication and don't store your conversion data permanently.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3 class="faq-question">Can I use this on mobile?</h3>
+                        <p class="faq-answer">Absolutely! The tool is fully responsive and optimized for mobile devices. On smaller screens, you'll see a streamlined single-column layout for the best experience.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3 class="faq-question">What happens when I log in or out?</h3>
+                        <p class="faq-answer">For your security, the conversion results are cleared when you log in or out. Simply re-convert your JSON to see the results again.</p>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-question">Can I use this for large datasets?</h3>
-                        <p class="faq-answer">Absolutely! The tool supports files up to 1M tokens. For larger datasets, consider splitting them into smaller chunks.</p>
+                        <p class="faq-answer">Yes! The tool supports files up to 1M tokens. For larger datasets, consider splitting them into smaller chunks for optimal performance.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3 class="faq-question">How do I download my converted files?</h3>
+                        <p class="faq-answer">Sign in with Google to unlock the download feature. Once signed in, you'll see the download button enabled after each conversion, allowing you to save results as .txt files.</p>
                     </div>
                 </div>
             </div>
