--- a/index.html
+++ b/index.html
@@ -303,6 +303,12 @@
                                 </svg>
                                 Chat
                             </button>
+                            <button class="ability-tab-btn" data-ability-tab="visualizations">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                                </svg>
+                                Visualizations
+                            </button>
                         </div>
 
                         <!-- Lab Tab Content -->
@@ -337,6 +343,28 @@
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
                                         </svg>
                                         Press Enter to send, Shift+Enter for new line
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Visualizations Tab Content -->
+                        <div class="ability-tab-content" id="visualizationsContent">
+                            <div class="visualizations-container">
+                                <div class="viz-header">
+                                    <button id="generateVizBtn" class="btn-generate-viz">
+                                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
+                                        </svg>
+                                        Generate Visualizations
+                                    </button>
+                                </div>
+                                <div id="visualizationsGrid" class="visualizations-grid">
+                                    <div class="viz-placeholder">
+                                        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                                        </svg>
+                                        <p>Click "Generate Visualizations" to create AI-powered charts based on your data</p>
                                     </div>
                                 </div>
                             </div>
