--- a/index.html
+++ b/index.html
@@ -389,63 +389,35 @@
                 <div class="faq-grid">
                     <div class="faq-item">
                         <h3 class="faq-question">What is TOON format?</h3>
-                        <p class="faq-answer">TOON (Token Optimized Object Notation) is a CSV-like format that reduces token usage by 40-70% compared to JSON, making it perfect for AI applications and LLMs.</p>
+                        <p class="faq-answer">TOON (Token Optimized Object Notation) is a compact format that reduces token usage by 40-70% compared to JSON, saving you money when using AI services.</p>
                     </div>
                     <div class="faq-item">
-                        <h3 class="faq-question">Do I need to sign in to use this tool?</h3>
-                        <p class="faq-answer">No! You can convert JSON to TOON and copy the results without signing in. However, signing in with Google unlocks the download feature to save your conversions as files.</p>
+                        <h3 class="faq-question">Do I need to sign in?</h3>
+                        <p class="faq-answer">No! You can convert and copy results without signing in. Sign in with Google to unlock downloads and AI Mode features (insights, chat, visualizations).</p>
                     </div>
                     <div class="faq-item">
-                        <h3 class="faq-question">What file formats are supported?</h3>
-                        <p class="faq-answer">We support JSON, CSV, and XLSX files. Upload any of these formats and convert them to token-efficient TOON format instantly.</p>
+                        <h3 class="faq-question">What file formats can I upload?</h3>
+                        <p class="faq-answer">JSON, CSV, and XLSX files are supported. Upload any of these to convert to TOON or analyze with AI.</p>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-question">Is my data secure?</h3>
-                        <p class="faq-answer">Yes! All conversions happen on our secure backend. We use Google OAuth for authentication and don't store your conversion data permanently.</p>
+                        <p class="faq-answer">Yes! Your data is processed securely and never stored permanently. We use Google sign-in for authentication.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3 class="faq-question">What is AI Mode?</h3>
+                        <p class="faq-answer">AI Mode analyzes your data with Google Gemini AI. Get instant insights, chat with your data, and see auto-generated visualizations. Requires sign-in.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3 class="faq-question">How do I use visualizations?</h3>
+                        <p class="faq-answer">Upload your data in AI Mode and switch to the Visualizations tab. AI will create 4 charts automatically. Click any chart to flip it and see details. Swipe or use arrow keys to navigate.</p>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-question">Can I use this on mobile?</h3>
-                        <p class="faq-answer">Absolutely! The tool is fully responsive and optimized for mobile devices. On smaller screens, you'll see a streamlined single-column layout for the best experience.</p>
+                        <p class="faq-answer">Yes! The app works great on all devices with a mobile-optimized layout.</p>
                     </div>
                     <div class="faq-item">
-                        <h3 class="faq-question">What happens when I log in or out?</h3>
-                        <p class="faq-answer">For your security, the conversion results are cleared when you log in or out. Simply re-convert your JSON to see the results again.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">Can I use this for large datasets?</h3>
-                        <p class="faq-answer">Yes! The tool supports files up to 1M tokens. For larger datasets, consider splitting them into smaller chunks for optimal performance.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">How do I download my converted files?</h3>
-                        <p class="faq-answer">Sign in with Google to unlock the download feature. Once signed in, you'll see the download button enabled after each conversion, allowing you to save results as .txt files.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">What is Ability Mode (AI Mode)?</h3>
-                        <p class="faq-answer">Ability Mode is our new AI-powered tab that provides intelligent data analysis and insights. It features Gemini AI integration for natural language queries about your data, smart data visualization, and advanced analytics. This feature requires Google sign-in to access.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">How do I access AI Mode?</h3>
-                        <p class="faq-answer">The AI Mode tab is visible to everyone in the header (marked with a lightbulb icon and "AI" badge). However, you must sign in with Google to use it. If you're not logged in and click the AI tab, you'll see a lock screen prompting you to sign in first.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">What happens if I logout while using AI Mode?</h3>
-                        <p class="faq-answer">For seamless navigation, if you log out while on the AI Mode tab, you'll be automatically redirected to the Converter tab. This ensures you always have access to features that don't require authentication.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">Can I switch between tabs freely?</h3>
-                        <p class="faq-answer">Yes! Both tabs (Converter and AI Mode) are always visible in the header. The Converter tab is accessible to everyone, while the AI Mode shows a beautiful lock overlay with feature information if you're not signed in. Simply click "Sign In" on the lock screen to unlock AI features.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">Does the app support dark and light themes?</h3>
-                        <p class="faq-answer">Absolutely! Click the theme toggle button (sun/moon icon) in the header to switch between dark and light modes. Your preference is saved automatically and will be remembered for future visits. The interface is fully optimized for both themes with smooth transitions.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">Is the interface responsive on all devices?</h3>
-                        <p class="faq-answer">Yes! We've implemented comprehensive responsive breakpoints (mobile ≤640px, large mobile ≤768px, tablet ≤1024px, desktop >1024px). The header adapts beautifully across all screen sizes with optimized layouts, icon sizing, and navigation patterns for each device type.</p>
-                    </div>
-                    <div class="faq-item">
-                        <h3 class="faq-question">What are the new tab animations?</h3>
-                        <p class="faq-answer">We've introduced a smooth "sliding door" animation when switching between tabs. A purple gradient background slides behind the active tab with a 0.6s cubic-bezier transition, providing visual feedback and enhancing the modern UI experience.</p>
+                        <h3 class="faq-question">How do I switch between dark and light mode?</h3>
+                        <p class="faq-answer">Click the sun/moon icon in the header. Your preference is saved automatically.</p>
                     </div>
                 </div>
             </div>
